--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @media (max-width: 768px) {
     #wrapper {
-        width: 85vw;
+        width: 90vw;
     }
 }
 
@@ -30,30 +30,30 @@
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 2rem;
     border-bottom: 3px double;
 }
 
 h2 {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     border-bottom: 1px dotted;
 }
 
 h3 {
-    font-size: 1.17em;
+    font-size: 1.17rem;
     border-bottom: 1px dashed;
 }
 
 h4 {
-    font-size: 1.00em;
+    font-size: 1.00rem;
 }
 
 h5 {
-    font-size: 0.83em;
+    font-size: 0.83rem;
 }
 
 h6 {
-    font-size: 0.67em;
+    font-size: 0.67rem;
 }
 
 hr {
