--- a/style.css
+++ b/style.css
@@ -67,6 +67,10 @@ blockquote {
     padding: 16px;
 }
 
+code, pre {
+    font-family: monospace, monospace;
+}
+
 .dark a {
     color: #2196F3;
 }
