--- a/style.css
+++ b/style.css
@@ -71,6 +71,16 @@ code, pre {
     font-family: monospace, monospace;
 }
 
+table {
+    border-collapse: collapse;
+}
+
+th, td {
+    border-bottom: 1px currentColor solid;
+    padding: 12px 18px;
+    margin: 0;
+}
+
 .dark a {
     color: #2196F3;
 }
