impl highlight codes and load lighlight style when exist highlight code block

--- a/template/template.html
+++ b/template/template.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="{{ relative_path }}{{ template_css }}">
+    {{ template_highlight_css }}
 </head>
 <body class="dark">
 <div id="wrapper">
