--- a/app/src/app/default.css
+++ b/app/src/app/default.css
@@ -58,31 +58,49 @@ body {
   color: #FAFAFA;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  font-weight: bold;
+}
+
 h1 {
   font-size: 2rem;
   border-bottom: 3px double;
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
 }
 
 h2 {
   font-size: 1.5rem;
   border-bottom: 1px dotted;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
 }
 
 h3 {
   font-size: 1.17rem;
   border-bottom: 1px dashed;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
 }
 
 h4 {
   font-size: 1.00rem;
+  margin-block-start: 1.33em;
+  margin-block-end: 1.33em;
 }
 
 h5 {
-  font-size: 0.83rem;
+  font-size: 0.83em;
+  margin-block-start: 1.67em;
+  margin-block-end: 1.67em;
 }
 
 h6 {
   font-size: 0.67rem;
+  margin-block-start: 2.33em;
+  margin-block-end: 2.33em;
 }
 
 hr {
@@ -113,6 +131,20 @@ pre code {
 
 table {
   border-collapse: collapse;
+}
+
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  padding-inline-start: 40px;
+}
+
+ul ul {
+  list-style-type: circle;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 th, td {
