とりあえずプロジェクトのベースはAstroに置き換え

--- a/app/src/components/GlobalStyle.astro
+++ b/app/src/components/GlobalStyle.astro
@@ -1,3 +1,6 @@
+---
+---
+<style is:global>
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -160,3 +163,4 @@ th, td {
 .dark a:visited {
   color: #00BCD4;
 }
+</style>
