--- a/app/src/components/GlobalStyle.astro
+++ b/app/src/components/GlobalStyle.astro
@@ -1,166 +1,165 @@
 ---
 ---
 <style is:global>
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+    @tailwind base;
+    @tailwind components;
+    @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+    :root {
+        --foreground-rgb: 0, 0, 0;
+        --background-start-rgb: 214, 219, 220;
+        --background-end-rgb: 255, 255, 255;
+    }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+    @media (prefers-color-scheme: dark) {
+        :root {
+            --foreground-rgb: 255, 255, 255;
+            --background-start-rgb: 0, 0, 0;
+            --background-end-rgb: 0, 0, 0;
+        }
+    }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+    body {
+        color: rgb(var(--foreground-rgb));
+        background: linear-gradient(
+                to bottom,
+                transparent,
+                rgb(var(--background-end-rgb))
+        ) rgb(var(--background-start-rgb));
+    }
 
-@media (max-width: 768px) {
-  #wrapper {
-    width: 90vw;
-  }
-}
+    @media (max-width: 768px) {
+        #wrapper {
+            width: 90vw;
+        }
+    }
 
-@media (min-width: 768px) {
-  #wrapper {
-    min-width: 692px;
-    width: 75vw;
-  }
-}
+    @media (min-width: 768px) {
+        #wrapper {
+            min-width: 692px;
+            width: 75vw;
+        }
+    }
 
-#wrapper {
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 30px;
-  font-family: -apple-system, Roboto, Arial, YuGothic, 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'MigMix 1P', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
-  letter-spacing: 1px;
-  word-break: break-all;
-}
+    #wrapper {
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 30px;
+        font-family: -apple-system, Roboto, Arial, YuGothic, 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'MigMix 1P', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
+        letter-spacing: 1px;
+        word-break: break-all;
+    }
 
-.light {
-  background: #FAFAFA;
-  color: #212121;
-}
+    .light {
+        background: #FAFAFA;
+        color: #212121;
+    }
 
-.dark {
-  background: #212121;
-  color: #FAFAFA;
-}
+    .dark {
+        background: #212121;
+        color: #FAFAFA;
+    }
 
-h1, h2, h3, h4, h5, h6 {
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  font-weight: bold;
-}
+    h1, h2, h3, h4, h5, h6 {
+        margin-inline-start: 0;
+        margin-inline-end: 0;
+        font-weight: bold;
+    }
 
-h1 {
-  font-size: 2rem;
-  border-bottom: 3px double;
-  margin-block-start: 0.67em;
-  margin-block-end: 0.67em;
-}
+    h1 {
+        font-size: 2rem;
+        border-bottom: 3px double;
+        margin-block-start: 0.67em;
+        margin-block-end: 0.67em;
+    }
 
-h2 {
-  font-size: 1.5rem;
-  border-bottom: 1px dotted;
-  margin-block-start: 0.83em;
-  margin-block-end: 0.83em;
-}
+    h2 {
+        font-size: 1.5rem;
+        border-bottom: 1px dotted;
+        margin-block-start: 0.83em;
+        margin-block-end: 0.83em;
+    }
 
-h3 {
-  font-size: 1.17rem;
-  border-bottom: 1px dashed;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-}
+    h3 {
+        font-size: 1.17rem;
+        border-bottom: 1px dashed;
+        margin-block-start: 1em;
+        margin-block-end: 1em;
+    }
 
-h4 {
-  font-size: 1.00rem;
-  margin-block-start: 1.33em;
-  margin-block-end: 1.33em;
-}
+    h4 {
+        font-size: 1.00rem;
+        margin-block-start: 1.33em;
+        margin-block-end: 1.33em;
+    }
 
-h5 {
-  font-size: 0.83em;
-  margin-block-start: 1.67em;
-  margin-block-end: 1.67em;
-}
+    h5 {
+        font-size: 0.83em;
+        margin-block-start: 1.67em;
+        margin-block-end: 1.67em;
+    }
 
-h6 {
-  font-size: 0.67rem;
-  margin-block-start: 2.33em;
-  margin-block-end: 2.33em;
-}
+    h6 {
+        font-size: 0.67rem;
+        margin-block-start: 2.33em;
+        margin-block-end: 2.33em;
+    }
 
-hr {
-  margin: 15px 75px;
-  border: unset;
-  border-top: dashed 1px;
-}
+    hr {
+        margin: 15px 75px;
+        border: unset;
+        border-top: dashed 1px;
+    }
 
-blockquote {
-  border: dashed 1px;
-  padding: 16px;
-}
+    blockquote {
+        border: dashed 1px;
+        padding: 16px;
+    }
 
-pre {
-  font-family: monospace, monospace;
-}
+    pre {
+        font-family: monospace, monospace;
+    }
 
-code {
-  font-family: Hack, monospace;
-}
+    code {
+        font-family: Hack, monospace;
+    }
 
-pre code {
-  overflow-x: auto;
-  display: block;
-  background: #2b2b2b;
-  padding: 1em;
-}
+    pre code {
+        overflow-x: auto;
+        display: block;
+        background: #2b2b2b;
+        padding: 1em;
+    }
 
-table {
-  border-collapse: collapse;
-}
+    table {
+        border-collapse: collapse;
+    }
 
-ul {
-  display: block;
-  list-style-type: disc;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  padding-inline-start: 40px;
-}
+    ul {
+        display: block;
+        list-style-type: disc;
+        margin-block-start: 1em;
+        margin-block-end: 1em;
+        padding-inline-start: 40px;
+    }
 
-ul ul {
-  list-style-type: circle;
-  margin-block-start: 0;
-  margin-block-end: 0;
-}
+    ul ul {
+        list-style-type: circle;
+        margin-block-start: 0;
+        margin-block-end: 0;
+    }
 
-th, td {
-  border-bottom: 1px currentColor solid;
-  padding: 12px 18px;
-  margin: 0;
-}
+    th, td {
+        border-bottom: 1px currentColor solid;
+        padding: 12px 18px;
+        margin: 0;
+    }
 
-.dark a {
-  color: #2196F3;
-}
+    .dark a {
+        color: #2196F3;
+    }
 
-.dark a:visited {
-  color: #00BCD4;
-}
+    .dark a:visited {
+        color: #00BCD4;
+    }
 </style>
