いくつかのスタイルを追加

--- a/app/src/components/GlobalStyle.astro
+++ b/app/src/components/GlobalStyle.astro
@@ -118,6 +118,8 @@
 
     pre {
         font-family: monospace, monospace;
+        white-space: pre;
+        margin: 1em 0;
     }
 
     code {
@@ -147,6 +149,13 @@
         list-style-type: circle;
         margin-block-start: 0;
         margin-block-end: 0;
+    }
+
+    ol {
+        list-style-type: decimal;
+        margin-block-start: 1em;
+        margin-block-end: 1em;
+        padding-inline-start: 40px;
     }
 
     th, td {
