--- a/app/src/pages/[...paths].astro
+++ b/app/src/pages/[...paths].astro
@@ -3,7 +3,7 @@ import {config} from "../../model/config";
 import {getFilePathLists} from "../lib/fs";
 import * as fs from "fs";
 import {markedConfig} from "../../marked.config";
-import {marked} from "marked";
+import {Marked} from "marked";
 import {mangle} from "marked-mangle";
 import {gfmHeadingId} from "marked-gfm-heading-id";
 import hljs from 'highlight.js';
@@ -24,6 +24,8 @@ export async function getStaticPaths(): Promise<{ params: { paths: string } }[]>
     })
 }
 
+const marked = new Marked()
+
 marked.use(markedHighlight({
     langPrefix: 'hljs language-',
     highlight(code: string, lang: string) {
@@ -43,12 +45,17 @@ const dirName = paths.length > 1 ? process.cwd() + '/../' + config.markdown_dir 
 const fileName = fs.existsSync(dirName + '/' + `${paths[paths.length-1]}.md`) ? `${paths[paths.length-1]}.md` : `${paths[paths.length-1]}.html`
 
 const file = fs.readFileSync(dirName + '/' + fileName, 'utf-8')
-const sourceCode = fileName.includes(".md") ? marked.parse(file, markedConfig) : file;
+const sourceCode = fileName.includes(".md") ? (
+    await marked.parse(file, {async: true, ...markedConfig})
+) : file;
 
 // エラーハンドリングの実装
 
 ---
 
 <DefaultLayout>
-<main id="wrapper" set:html={sourceCode}></main>
+    <article set:html={sourceCode}></article>
+    {
+        sourceCode.includes("language-") ? <link rel="stylesheet" href="/highlight.css" /> : ""
+    }
 </DefaultLayout>
