リンクのスタイルを追加

--- a/app/src/components/GlobalStyle.astro
+++ b/app/src/components/GlobalStyle.astro
@@ -164,6 +164,15 @@
         margin: 0;
     }
 
+    a {
+        color: #0000EE;
+        text-decoration-line: underline;
+    }
+
+    a:visited {
+        color: #551A8B;
+    }
+
     .dark a {
         color: #2196F3;
     }
