--- a/app/src/pages/list.astro
+++ b/app/src/pages/list.astro
@@ -6,7 +6,7 @@ import DefaultLayout from "../layout/default.astro";
 const articleDir = process.cwd() + '/../' + config.markdown_dir
 const pathLists = getFilePathLists(articleDir, articleDir)
 const pages = pathLists.map(pathList => {
-    const href = "../" + pathList.join('/')
+    const href = "../" + pathList.join('/') + ".html"
 
 // ファイルのあるディレクトリの名前
     const dirName = pathList.length > 1 ? process.cwd() + '/../' + config.markdown_dir + '/' + pathList.slice(0, pathList.length - 1).join('/') : process.cwd() + '/../' + config.markdown_dir
