--- a/app/src/layout/default.astro
+++ b/app/src/layout/default.astro
@@ -9,6 +9,8 @@ const { title } = Astro.props
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>documents</title>
     <GlobalStyle />
+    <base href={import.meta.env.BASE_URL} />
+    <link rel="icon" href={"./favicon.ico"} />
 </head>
 <body class="dark">
 <main id="wrapper">
