--- a/app/src/pages/[...paths].astro
+++ b/app/src/pages/[...paths].astro
@@ -56,6 +56,7 @@ const sourceCode = fileName.includes(".md") ? (
 <DefaultLayout>
     <article set:html={sourceCode}></article>
     {
-        sourceCode.includes("language-") ? <link rel="stylesheet" href="/highlight.css" /> : ""
+        sourceCode.includes("language-") ? <link rel="stylesheet" href="./highlight.css" /> : ""
+
     }
 </DefaultLayout>
