--- a/app/src/pages/list.astro
+++ b/app/src/pages/list.astro
@@ -1,18 +1,14 @@
 ---
 import {config} from "../../model/config";
-import {getFilePathLists} from "../lib/fs";
+import {getCollection} from "astro:content";
 import * as fs from "fs";
 import DefaultLayout from "../layout/default.astro";
-const articleDir = process.cwd() + '/../' + config.markdown_dir
-const pathLists = getFilePathLists(articleDir, articleDir)
-const pages = pathLists.map(pathList => {
-// ファイルのあるディレクトリの名前
-    const dirName = pathList.length > 1 ? process.cwd() + '/../' + config.markdown_dir + '/' + pathList.slice(0, pathList.length - 1).join('/') : process.cwd() + '/../' + config.markdown_dir
 
-// ファイル名
-    const fileName = fs.existsSync(dirName + '/' + `${pathList[pathList.length - 1]}.md`) ? `${pathList[pathList.length - 1]}.md` : `${pathList[pathList.length - 1]}.html`
 
-    const file = fs.readFileSync(dirName + '/' + fileName, 'utf-8')
+const pathLists = await getCollection("articles")
+
+const pages: {href: string, title: string}[] = pathLists.map(pathList => {
+    const file = pathList.body
 
     const regexResult = /(^# (?<md_title>.*))|(<h1.*>(?<html_title>.*)<\/h1>)/.exec(file)
     const title = regexResult?.groups?.md_title
@@ -21,7 +17,7 @@ const pages = pathLists.map(pathList => {
             ? regexResult?.groups?.html_title
             : "no title");
 
-    const href = "./" + pathList.join('/') + ".html"
+    const href = "./" + pathList.slug + ".html"
 
     return {
         href,
