クッションがあるときにページ見えちゃう問題を対処しました

--- a/app/src/layout/default.astro
+++ b/app/src/layout/default.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props
     <link rel="icon" href={"./favicon.ico"} />
 </head>
 <body class="dark">
-<main id="wrapper">
+<div id="wrapper">
     <slot />
     <ThemeToggler />
 </main>
