デフォルトのクッションNoボタンメッセージを親切にした

--- a/app/src/pages/[...paths].astro
+++ b/app/src/pages/[...paths].astro
@@ -46,7 +46,7 @@ const {Content} = await post.render()
                             post?.data?.cushionYes ? post?.data?.cushionYes : "Yes"
                         }</button>
                         <a id="cushion-no" class="border rounded py-4 px-2 mt-8 text-center" href={post?.data?.cushionNoHref ? post?.data?.cushionNoHref : "https://google.com"}>{
-                            post?.data?.cushionNo ? post?.data?.cushionNo : "No"
+                            post?.data?.cushionNo ? post?.data?.cushionNo : "No, google.comに行きます"
                         }</a>
                     </div>
                 </div>
