モバイルでテーブルの可読性が終わっていたので調整

--- a/app/src/components/GlobalStyle.astro
+++ b/app/src/components/GlobalStyle.astro
@@ -155,6 +155,17 @@
         margin: 0;
     }
 
+    /* モバイルのときに全く読めないので調整 */
+    @media (max-width: 768px) {
+        table {
+            font-size: 0.75rem;
+        }
+
+        th, td {
+            padding: 4px;
+        }
+    }
+
     a {
         color: #0000EE;
         text-decoration-line: underline;
