titleをちゃんと埋めるようにした

--- a/app/src/layout/default.astro
+++ b/app/src/layout/default.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>documents</title>
+    <title>{title}</title>
     <GlobalStyle />
     <base href={import.meta.env.BASE_URL} />
     <link rel="icon" href={"./favicon.ico"} />
