--- a/app/src/pages/list.astro
+++ b/app/src/pages/list.astro
@@ -23,7 +23,7 @@ const pages: {href: string, title: string}[] = pathLists.map(pathList => {
     }
 })
 ---
-<DefaultLayout>
+<DefaultLayout title="記事一覧">
     <article>
         <h1>記事一覧</h1>
         <ul>
